fixed responsive issues on mobile phone

--- a/advice-generator-app/style.css
+++ b/advice-generator-app/style.css
@@ -48,7 +48,7 @@ body {
 @media (max-width: 375px) {
     .content {
         margin: 100px auto;
-        width: 90vw;
+        width: 85vw;
         height: 230px;
         min-width: 365px;
     }
